Default values for theme variables
Fixed assets digest in JS

--- a/app/new_ui_views/dynamic_theme/_new_ui.html.erb
+++ b/app/new_ui_views/dynamic_theme/_new_ui.html.erb
@@ -415,7 +415,6 @@ button.close { background: transparent; border: 0; }
 .jumbotron { border: 3px solid <%= theme_blue %>; background: #fff; }
 .dialog__overlay { background: rgba(0, 0, 0, 0.5); }
 .dialog__container { background: #fff; }
-.dialog__container:after { background: url("/assets/new_ui/loader.gif") 50% 50% no-repeat; }
 .dialog__close { background: none; border: none; }
 .dialog__close:before { color: <%= theme_blue %>; }
 .chart-a { border: 1px solid #f4f4f4; }
@@ -479,7 +478,7 @@ abbr[title="required"] { color: #e45d51; border: none; }
 .form-images .drop-zone .text { color: #999; }
 .form-images .drop-zone:before { border: 2px dotted #e2e2e2; }
 .form-images .input-preview { background: #f4f4f4; border: 1px solid #e2e2e2; }
-.form-images .preview figure { background: #fff url("/assets/new_ui/checkers.png"); }
+.form-images .preview figure { background-color: #fff; }
 .form-images .preview small { background: rgba(0, 0, 0, 0.5); color: #fff; }
 .form-images .file-upload { color: <%= theme_blue %>; }
 .form-images .file-upload:before { color: <%= theme_blue %>; }
