NM-3795 Using different titles for availability section in the location modal and in the pricing availability section for a listing

--- a/app/new_ui_views/dashboard/company/transactables/form_fields/_availability.html.haml
+++ b/app/new_ui_views/dashboard/company/transactables/form_fields/_availability.html.haml
@@ -1,7 +1,7 @@
 - id_prefix ||= ''
 %hr/
 %h3
-  = t(:title, scope: [:pricing, :availability])
+  = title ||= t(:title, scope: [:pricing, :availability])
 .listing-availability
   = f.input :availability_template_id, label: false do
     %ul.box-options
