--- a/app/views/instance_admin/reports/listings/_transactable.html.haml
+++ b/app/views/instance_admin/reports/listings/_transactable.html.haml
@@ -3,3 +3,6 @@
   %td= transactable.name
   %td= transactable.description.to_s.truncate(100)
   %td= transactable.properties.to_h.to_s.truncate(100)
+  %td
+    = link_to t('instance_admin.edit'), edit_instance_admin_reports_listing_path(transactable)
+    = link_to t('instance_admin.delete'), instance_admin_reports_listing_path(transactable), method: :delete, data: { confirm: t('instance_admin.are_you_sure') }
