--- a/app/views/instance_admin/reports/listings/index.html.haml
+++ b/app/views/instance_admin/reports/listings/index.html.haml
@@ -44,6 +44,8 @@
             = t('instance_admin.reports.fields.description')
           %th
             = t('instance_admin.reports.fields.properties')
+          %th
+            = t('instance_admin.reports.fields.actions')
         - @transactables.each do |transactable|
           = render 'transactable', :transactable => transactable
 
