NM-3809 Reviews select without double initialization. Spectrum loaded only when needed

--- a/app/frontend/stylesheets/new_ui/new_ui_vendor.scss
+++ b/app/frontend/stylesheets/new_ui/new_ui_vendor.scss
@@ -6,6 +6,7 @@
 @import 'x-editable/dist/bootstrap3-editable/css/bootstrap-editable';
 @import 'cropper/dist/cropper.min';
 @import "eonasdan-bootstrap-datetimepicker/src/sass/bootstrap-datetimepicker-build";
+@import 'spectrum/spectrum';
 
 // Vendor overrides
 @import "vendor/vendor";
