--- a/app/frontend/stylesheets/dashboard.scss
+++ b/app/frontend/stylesheets/dashboard.scss
@@ -2,6 +2,7 @@
 @import "vendor/bootstrap-theme";
 @import "vendor/bootstrap-select";
 @import "bootstrap-switch/dist/css/bootstrap3/bootstrap-switch";
+@import "spectrum/spectrum";
 
 @import "chosen/chosen.min";
 
