--- a/app/frontend/stylesheets/instance_admin_vendor.scss
+++ b/app/frontend/stylesheets/instance_admin_vendor.scss
@@ -30,3 +30,5 @@ $fa-font-path: '/assets/font-awesome/';
 @import "eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min";
 @import "select2/select2";
 
+@import "spectrum/spectrum";
+
