NM-3821 card subscription

--- a/app/new_ui_views/dashboard/company/merchant_accounts/_braintree_marketplace.html.liquid
+++ b/app/new_ui_views/dashboard/company/merchant_accounts/_braintree_marketplace.html.liquid
@@ -8,10 +8,10 @@
 
 <h3>{{ 'dashboard.merchant_account.header' | translate }}</h3>
 
-{% if merchant_account.errors != blank %}
+{% if merchant_account.errors %}
 <div class="errors-global">
   <ul>
-    <li>{{ merchant_account.errors }}</li>
+    {{ merchant_account.errors }}
   </ul>
 </div>
 {% endif %}
