--- a/app/new_ui_views/dashboard/company/merchant_accounts/_paypal_adaptive.html.liquid
+++ b/app/new_ui_views/dashboard/company/merchant_accounts/_paypal_adaptive.html.liquid
@@ -1,5 +1,14 @@
 <h2>{{ 'simple_form.labels.company.payout.via_paypal' | translate }}</h2>
 
+
+{% if merchant_account.errors != blank %}
+<div class="errors-global">
+  <ul>
+    {{ merchant_account.errors }}
+  </ul>
+</div>
+{% endif %}
+
 <input id="company_paypal_adaptive_merchant_account_attributes_id" name="company[paypal_adaptive_merchant_account_attributes][id]" type="hidden" value="{{ merchant_account.id}}">
 
 <div class="form-group string optional company_paypal_adaptive_merchant_account_attributes_email">
