--- a/app/new_ui_views/dashboard/company/merchant_accounts/_stripe_connect.html.haml
+++ b/app/new_ui_views/dashboard/company/merchant_accounts/_stripe_connect.html.haml
@@ -9,7 +9,7 @@
     .errors-global
       %ul
         - merchant_account.errors.messages.values.each do |err|
-          %li= err
+          %li= err.first
 
   .form-group.string.optional
     = maf.label :account_type, t('dashboard.merchant_account.account_type'), class: 'string optional control-label'
