--- a/app/views/shared/payment_methods/_credit_card.html.haml
+++ b/app/views/shared/payment_methods/_credit_card.html.haml
@@ -1,71 +1,76 @@
+- credit_card = f.object.credit_card || f.object.build_credit_card
 .credit-card-fields
   - if f.object.respond_to?(:authorized?) && f.object.authorized?
     = t 'payments.already_authorized'
   - else
-    = f.simple_fields_for :credit_card_attributes, f.object.credit_card || f.object.build_credit_card do |form|
-      = form.error :base
+    - if credit_card.try(:active?)
+      = t('payments.cc_fields.subscribed', last_4: credit_card.last_4)
+      = f.hidden_field :credit_card_id, value: credit_card.id
+      =# link_to(t('payments.cc_fields.unsubscribe'), dashboard_credit_card_path(form.object), method: :delete)
+    - else
+      = f.simple_fields_for :credit_card_attributes, credit_card do |form|
+        = form.error :base
+        .padding-bottom.submit-secure-payment
+          .row-fluid
+            .span5.text
+              .ico-lock= t 'payments.heading'
+            .span7.credit-card-images
+              = image_tag 'credit-cards.png', alt: "Visa, Mastercard, American Express, Discover"
+            .clearfix
 
-      .padding-bottom.submit-secure-payment
-        .row-fluid
-          .span5.text
-            .ico-lock= t 'payments.heading'
-          .span7.credit-card-images
-            = image_tag 'credit-cards.png', alt: "Visa, Mastercard, American Express, Discover"
-          .clearfix
+        .padding-bottom.credit-card
+          .row-fluid
+            .span6
+              = form.label :first_name, required: true, label: t('payments.cc_fields.first_name')
+              = form.input_field :first_name, class: 'sessioncamexclude', required: true, autocomplete: :off, value: (form.object.first_name.presence || current_user.first_name)
+            .span6
+              = form.label :last_name, required: true, label: t('payments.cc_fields.last_name')
+              = form.input_field :last_name, class: 'sessioncamexclude', required: true, autocomplete: :off, value: (form.object.last_name.presence || current_user.last_name)
+          .row-fluid
+            .span12.card-info{class: "#{"error" if form.object.errors.include?(:number).present?}"}
+              = form.label :number, required: true, label: t('payments.cc_fields.card_number')
+              .controls.card-number.input-icon-holder-right
+                = form.input_field :number, required: true, placeholder: 'aaaa aaaa aaaa aaaa', class: 'sessioncamexclude', pattern: "[0-9]*", autocomplete: "off", 'data-card-number' => true
+                %span.ico-credit-card
+              - if form.object.errors[:number].present?
+                %p.error-block
+                  = form.object.errors[:number].flatten.first
+          .row-fluid
+            .span4.card-info.expiry.column.left{class: "#{"error" if form.object.errors.include?(:month).present?}"}
+              .visible-phone
+                = form.label :month, t('payments.cc_fields.expiration_date_month'), class: 'control-label'
+              .hidden-phone
+                = form.label :month, t('payments.cc_fields.expiration_date'), class: 'control-label'
+              .controls.card-expires
+                = form.input_field :month, collection: credit_card_date[:month], prompt: false, class: 'sessioncamexclude no-icon select2'
 
-      .padding-bottom.credit-card
-        .row-fluid
-          .span6
-            = form.label :first_name, required: true, label: t('payments.cc_fields.first_name')
-            = form.input_field :first_name, class: 'sessioncamexclude', required: true, autocomplete: :off, value: (form.object.first_name.presence || current_user.first_name)
-          .span6
-            = form.label :last_name, required: true, label: t('payments.cc_fields.last_name')
-            = form.input_field :last_name, class: 'sessioncamexclude', required: true, autocomplete: :off, value: (form.object.last_name.presence || current_user.last_name)
-        .row-fluid
-          .span12.card-info{class: "#{"error" if form.object.errors.include?(:number).present?}"}
-            = form.label :number, required: true, label: t('payments.cc_fields.card_number')
-            .controls.card-number.input-icon-holder-right
-              = form.input_field :number, required: true, placeholder: 'aaaa aaaa aaaa aaaa', class: 'sessioncamexclude', pattern: "[0-9]*", autocomplete: "off", 'data-card-number' => true
-              %span.ico-credit-card
-            - if form.object.errors[:number].present?
-              %p.error-block
-                = form.object.errors[:number].flatten.first
-        .row-fluid
-          .span4.card-info.expiry.column.left{class: "#{"error" if form.object.errors.include?(:month).present?}"}
-            .visible-phone
-              = form.label :month, t('payments.cc_fields.expiration_date_month'), class: 'control-label'
-            .hidden-phone
-              = form.label :month, t('payments.cc_fields.expiration_date'), class: 'control-label'
-            .controls.card-expires
-              = form.input_field :month, collection: credit_card_date[:month], prompt: false, class: 'sessioncamexclude no-icon select2'
+              - if form.object.errors[:month].present?
+                %p.error-block
+                  = form.object.errors[:month].flatten.first
 
-            - if form.object.errors[:month].present?
-              %p.error-block
-                = form.object.errors[:month].flatten.first
+            .span4.card-info.expiry.column.left{class: "#{"error" if form.object.errors.include?(:year).present?}"}
+              .hidden-phone
+                %label.control-label
+                  &nbsp;
+              .visible-phone
+                = form.label :year, t('payments.cc_fields.expiration_date_year'), class: 'control-label'
+              .controls.card-expires
+                = form.input_field :year, collection: credit_card_date[:year], prompt: false, class: 'sessioncamexclude no-icon select2'
 
-          .span4.card-info.expiry.column.left{class: "#{"error" if form.object.errors.include?(:year).present?}"}
-            .hidden-phone
-              %label.control-label
-                &nbsp;
-            .visible-phone
-              = form.label :year, t('payments.cc_fields.expiration_date_year'), class: 'control-label'
-            .controls.card-expires
-              = form.input_field :year, collection: credit_card_date[:year], prompt: false, class: 'sessioncamexclude no-icon select2'
+              - if form.object.errors[:year].present?
+                %p.error-block
+                  = form.object.errors[:year].flatten.first
 
-            - if form.object.errors[:year].present?
-              %p.error-block
-                = form.object.errors[:year].flatten.first
+            .span4.card-info.security.column.right{class: "#{"error" if form.object.errors.include?(:verification_value).present?}"}
+              = form.label :verification_value, class: 'control-label' do
+                %abbr{ title: "required" } *
+                = t 'payments.cc_fields.security_code'
 
-          .span4.card-info.security.column.right{class: "#{"error" if form.object.errors.include?(:verification_value).present?}"}
-            = form.label :verification_value, class: 'control-label' do
-              %abbr{ title: "required" } *
-              = t 'payments.cc_fields.security_code'
-
-            .controls.card-code
-              = form.input_field :verification_value, size: 3, placeholder: 'CCV', required: true, class: 'sessioncamexclude', pattern: "[0-9]*", autocomplete: "off", 'data-card-code' => true
-            - if form.object.errors[:verification_value].present?
-              %p.error-block
-                = form.object.errors[:verification_value].flatten.first
+              .controls.card-code
+                = form.input_field :verification_value, size: 3, placeholder: 'CCV', required: true, class: 'sessioncamexclude', pattern: "[0-9]*", autocomplete: "off", 'data-card-code' => true
+              - if form.object.errors[:verification_value].present?
+                %p.error-block
+                  = form.object.errors[:verification_value].flatten.first
 .clearfix
 
 = render 'listings/reservations/confirm_reservations', f: f
