--- a/app/new_ui_views/listings/recurring_bookings/review.html.haml
+++ b/app/new_ui_views/listings/recurring_bookings/review.html.haml
@@ -49,9 +49,12 @@
           %h2= t 'reservations_review.contact_information'
 
           = render 'contact_information_fields', :f => f
-
-        = render 'shared/payment_subscription', f: f
-        = f.button :submit, t('reservations_review.buttons.request'), data: { disable_with: t('reservations_review.disabled_buttons.request') }
+        - if f.object.payment_subscription.present? && f.object.payment_subscription.payment_methods.any?
+          = render 'shared/payment_subscription', f: f
+          = f.button :submit, t('reservations_review.buttons.request'), data: { disable_with: t('reservations_review.disabled_buttons.request') }
+        - else
+          %h2= t("reservations_review.missing_payment_method")
+          %span= t("reservations_review.missing_payment_method_info")
 
 - content_for :script do
   :javascript
