--- a/app/views/shared/_payments.html.haml
+++ b/app/views/shared/_payments.html.haml
@@ -1,9 +1,13 @@
-%h2= t 'reservations_review.payment_information'
 = f.simple_fields_for :payment_attributes, f.object.payment do |form|
+
+  %h2= t 'reservations_review.payment_information'
+  - if form.object.payable.respond_to?(:monthly?) && form.object.payable.monthly?
+    %p= t 'recurring_reservations_review.prorated_info'
+
   = form.error :base
 
   #accordion2.accordion
-    - form.object.payment_methods.each_with_index do |payment_method, index|
+    - form.object.decorate.payment_methods.each_with_index do |payment_method, index|
       - selected_payment_method = form.object.payment_method_id == payment_method.id || (index.zero? && form.object.payment_method_id.blank?)
       .accordion-group
         .accordion-heading
