--- a/app/frontend/stylesheets/themes/_buy_sell.scss
+++ b/app/frontend/stylesheets/themes/_buy_sell.scss
@@ -954,6 +954,10 @@ body.buy-sell-theme {
       font-size: 16px;
     }
 
+    .select {
+      background: #fff;
+    }
+
     form input[type="text"] {
       background: #fff;
       border: solid #D4D4D4 1px;
