--- a/app/new_ui_views/dashboard/company/host_reservations/_reservation.html.haml
+++ b/app/new_ui_views/dashboard/company/host_reservations/_reservation.html.haml
@@ -104,7 +104,7 @@
       %h3
         = t("dashboard.host_reservations.payment_state")
     .col-md-9{class: reservation.paid? ? 'info' : "warn" }
-      = reservation.payment_status.humanize.capitalize
+      = reservation.payment.state.humanize.capitalize
 
   .row
     .col-md-3
