--- a/app/views/instance_admin/settings/seller_attachments/show.html.haml
+++ b/app/views/instance_admin/settings/seller_attachments/show.html.haml
@@ -2,7 +2,7 @@
   %h4
     = t('instance_admin.settings.seller_attachments.seller_attachments')
 
-  = simple_form_for @instance, url: instance_admin_settings_seller_attachments_path(@instance) do |f|
+  = simple_form_for @instance, url: instance_admin_settings_seller_attachments_path do |f|
 
     .row
       .input-container.col-xs-12
