NM-3829 Fixed white space in footer on product search results page

--- a/app/frontend/stylesheets/components/_sticky_footer.scss
+++ b/app/frontend/stylesheets/components/_sticky_footer.scss
@@ -41,7 +41,7 @@ html, body {
 
 .footer-wrapper {
   margin-top: -$footer-height;
-  padding: 0;
+  box-sizing: border-box;
   min-height: $footer-height;
   position: absolute;
   bottom: 0;
