--- a/app/new_ui_views/dynamic_theme/_new_ui.html.erb
+++ b/app/new_ui_views/dynamic_theme/_new_ui.html.erb
@@ -114,21 +114,73 @@ output { color: #555; }
 .btn { border: 1px solid transparent; }
 .btn:hover, .btn:focus, .btn.focus { color: <%= theme_blue %>; }
 
-.btn-default { color: <%= theme_blue %>; background-color: #fff; border-color: <%= theme_blue %>; }
-.btn-default:focus, .btn-default.focus { color: <%= theme_blue %>; background-color: #e6e6e6; border-color: black; }
-.btn-default:hover { color: <%= theme_blue %>; background-color: #e6e6e6; border-color: black; }
-.btn-default:active, .btn-default.active, .open > .btn-default.dropdown-toggle { color: <%= theme_blue %>; background-color: #e6e6e6; border-color: black; }
-.btn-default:active:hover, .btn-default:active:focus, .btn-default:active.focus, .btn-default.active:hover, .btn-default.active:focus, .btn-default.active.focus, .open > .btn-default.dropdown-toggle:hover, .open > .btn-default.dropdown-toggle:focus, .open > .btn-default.dropdown-toggle.focus { color: <%= theme_blue %>; background-color: #d4d4d4; border-color: black; }
-.btn-default.disabled:hover, .btn-default.disabled:focus, .btn-default.disabled.focus, .btn-default[disabled]:hover, .btn-default[disabled]:focus, .btn-default[disabled].focus, fieldset[disabled] .btn-default:hover, fieldset[disabled] .btn-default:focus, fieldset[disabled] .btn-default.focus { background-color: #fff; border-color: <%= theme_blue %>; }
-.btn-default .badge { color: #fff; background-color: <%= theme_blue %>; }
+.btn-default,
+.form-actions [type=submit] { color: <%= theme_blue %>; background-color: #fff; border-color: <%= theme_blue %>; }
+.btn-default:focus,
+.btn-default.focus,
+.form-actions [type=submit]:focus { color: <%= theme_blue %>; background-color: #e6e6e6; border-color: black; }
 
-.btn-primary { color: #fff; background-color: <%= theme_blue %>; border-color: <%= darken_color(theme_blue, 0.05) %>; }
-.btn-primary:focus, .btn-primary.focus { color: #fff; background-color: <%= darken_color(theme_blue, 0.1) %>; border-color: <%= darken_color(theme_blue, 0.25) %>; }
-.btn-primary:hover { color: #fff; background-color: <%= darken_color(theme_blue, 0.1) %>; border-color: <%= darken_color(theme_blue, 0.12) %>; }
-.btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle { color: #fff; background-color: <%= darken_color(theme_blue, 0.1) %>; border-color: <%= darken_color(theme_blue, 0.12) %>; }
-.btn-primary:active:hover, .btn-primary:active:focus, .btn-primary:active.focus, .btn-primary.active:hover, .btn-primary.active:focus, .btn-primary.active.focus, .open > .btn-primary.dropdown-toggle:hover, .open > .btn-primary.dropdown-toggle:focus, .open > .btn-primary.dropdown-toggle.focus { color: #fff; background-color: <%= darken_color(theme_blue, 0.17) %>; border-color: <%= darken_color(theme_blue, 0.25) %>; }
-.btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus { background-color: <%= theme_blue %>; border-color: <%= darken_color(theme_blue, 0.05) %>; }
-.btn-primary .badge { color: <%= theme_blue %>; background-color: #fff; }
+.btn-default:hover,
+.form-actions [type=submit]:hover { color: <%= theme_blue %>; background-color: #e6e6e6; border-color: black; }
+
+.btn-default:active, .btn-default.active, .open > .btn-default.dropdown-toggle, .form-actions [type=submit]:active { color: <%= theme_blue %>; background-color: #e6e6e6; border-color: black; }
+.btn-default:active:hover, .btn-default:active:focus, .btn-default:active.focus, .btn-default.active:hover, .btn-default.active:focus, .btn-default.active.focus, .open > .btn-default.dropdown-toggle:hover, .open > .btn-default.dropdown-toggle:focus, .open > .btn-default.dropdown-toggle.focus, .form-actions [type=submit]:active:hover, .form-actions [type=submit]:active:focus { color: <%= theme_blue %>; background-color: #d4d4d4; border-color: black; }
+.btn-default.disabled:hover, .btn-default.disabled:focus, .btn-default.disabled.focus, .btn-default[disabled]:hover, .btn-default[disabled]:focus, .btn-default[disabled].focus, fieldset[disabled] .btn-default:hover, fieldset[disabled] .btn-default:focus, fieldset[disabled] .btn-default.focus, .form-actions [type=submit].disabled:hover, .form-actions [type=submit].disabled:focus, .form-actions [type=submit][disabled]:hover, .form-actions [type=submit][disabled]:focus { background-color: #fff; border-color: <%= theme_blue %>; }
+.btn-default .badge, .form-actions [type=submit] .badge { color: #fff; background-color: <%= theme_blue %>; }
+
+.btn-primary,
+.page-header .options > a,
+.page-header .options > button { color: #fff; background-color: <%= theme_blue %>; border-color: <%= darken_color(theme_blue, 0.05) %>; }
+
+.btn-primary:focus,
+.btn-primary.focus,
+.page-header .options > a:focus,
+.page-header .options > button:focus { color: #fff; background-color: <%= darken_color(theme_blue, 0.1) %>; border-color: <%= darken_color(theme_blue, 0.25) %>; }
+
+.btn-primary:hover,
+.page-header .options > a:hover,
+.page-header .options > button:hover { color: #fff; background-color: <%= darken_color(theme_blue, 0.1) %>; border-color: <%= darken_color(theme_blue, 0.12) %>; }
+
+.btn-primary:active,
+.btn-primary.active,
+.open > .btn-primary.dropdown-toggle,
+.page-header .options > a:active,
+.page-header .options > button:active { color: #fff; background-color: <%= darken_color(theme_blue, 0.1) %>; border-color: <%= darken_color(theme_blue, 0.12) %>; }
+
+.btn-primary:active:hover,
+.btn-primary:active:focus,
+.btn-primary:active.focus,
+.btn-primary.active:hover,
+.btn-primary.active:focus,
+.btn-primary.active.focus,
+.page-header .options > a:active:hover,
+.page-header .options > a:active:focus,
+.page-header .options > button:active:hover,
+.page-header .options > button:active:focus,
+.open > .btn-primary.dropdown-toggle:hover,
+.open > .btn-primary.dropdown-toggle:focus,
+.open > .btn-primary.dropdown-toggle.focus { color: #fff; background-color: <%= darken_color(theme_blue, 0.17) %>; border-color: <%= darken_color(theme_blue, 0.25) %>; }
+
+.btn-primary.disabled:hover,
+.btn-primary.disabled:focus,
+.btn-primary.disabled.focus,
+.btn-primary[disabled]:hover,
+.btn-primary[disabled]:focus,
+.btn-primary[disabled].focus,
+.page-header .options > a.disabled:hover,
+.page-header .options > a.disabled:focus,
+.page-header .options > a[disabled]:hover,
+.page-header .options > a[disabled]:focus,
+.page-header .options > button.disabled:hover,
+.page-header .options > button.disabled:focus,
+.page-header .options > button[disabled]:hover,
+.page-header .options > button[disabled]:focus,
+fieldset[disabled] .btn-primary:hover,
+fieldset[disabled] .btn-primary:focus,
+fieldset[disabled] .btn-primary.focus { background-color: <%= theme_blue %>; border-color: <%= darken_color(theme_blue, 0.05) %>; }
+.btn-primary .badge
+.page-header .options > a .badge,
+.page-header .options > button .badge { color: <%= theme_blue %>; background-color: #fff; }
 
 .btn-success { color: #fff; background-color: #5cb85c; border-color: #4cae4c; }
 .btn-success:focus, .btn-success.focus { color: #fff; background-color: #449d44; border-color: #255625; }
