--- a/app/views/reservation_mailer/notify_guest_of_confirmation_by_host.html.liquid
+++ b/app/views/reservation_mailer/notify_guest_of_confirmation_by_host.html.liquid
@@ -77,7 +77,7 @@
       <span style="float: right;">{{ reservation.balance }}</span>
     </div>
 
-    {% if reservation.pending? %}
+    {% if reservation.unconfirmed? %}
       <div class="row">
         <span style="float: right;">This reservation is currently pending confirmation, and will be charged when confirmed.</span>
       </div>
