--- a/app/new_ui_views/dashboard/company/host_reservations/_owner_actions.html.haml
+++ b/app/new_ui_views/dashboard/company/host_reservations/_owner_actions.html.haml
@@ -9,7 +9,7 @@
 - if reservation.can_reject?
   = link_to t('dashboard.host_reservations.actions.decline'), rejection_form_dashboard_company_host_reservation_path(reservation, listing_id:reservation.listing), class: 'btn btn-warning', data: { modal: true }
 
-- if (reservation.pending? || reservation.authorized?) && (reservation.unconfirmed? || reservation.confirmed?)
+- if !reservation.paid? && (reservation.unconfirmed? || reservation.confirmed?)
   - if reservation.remote_payment?
     = link_to  t('dashboard.host_reservations.actions.request_payment'), request_payment_dashboard_company_host_reservation_path(reservation, listing_id: reservation.listing), class: 'btn btn-warning', data: { confirm: t('dashboard.host_reservations.confirmations.request_payment') }
   - elsif reservation.manual_payment?
