NM-3841 fix nonce

--- a/app/views/shared/payment_methods/_nonce.html.haml
+++ b/app/views/shared/payment_methods/_nonce.html.haml
@@ -31,7 +31,9 @@
               $(".submit-payment").show()
             },
             onCancelled: function (payload) {
-              $(".submit-payment").hide()
+              if ($('#paypal-button').parents('.accordion-body').hasClass('in')) {
+                $(".submit-payment").hide();
+              }
             },
           });
         }
