NM-3801 Mangled title in dashboard section - fixed

--- a/app/new_ui_views/registrations/social_accounts.html.haml
+++ b/app/new_ui_views/registrations/social_accounts.html.haml
@@ -1,4 +1,4 @@
-- title t('dashboard.nav.social_accounts')
+- title t('dashboard.nav.social_accounts').html_safe
 
 - content_for :page_header do
   %h1= yield :title
