--- a/app/new_ui_views/dynamic_theme/_new_ui.html.erb
+++ b/app/new_ui_views/dynamic_theme/_new_ui.html.erb
@@ -1,6 +1,6 @@
 <style id="dynamic-stylesheet" data-stylesheet="newui">
 <%
-  theme = current_instance.theme
+  theme = PlatformContext.current.theme
 
   # colors
 
