--- a/app/views/dynamic_theme/_dashboard.html.erb
+++ b/app/views/dynamic_theme/_dashboard.html.erb
@@ -1,6 +1,6 @@
 <style id="dynamic-stylesheet" data-stylesheet="dashboard">
 <%
-  theme = current_instance.theme
+  theme = PlatformContext.current.theme
 
   # colors
 
