--- a/app/views/registrations/profile/_user_badge.html.liquid
+++ b/app/views/registrations/profile/_user_badge.html.liquid
@@ -4,7 +4,7 @@
 			<a href="{{ user.edit_profile_path }}" class="edit-link">Edit</a>
 		{% endif %}
 		<div class="vendor-pic">
-			<img src={{user.avatar_url_big}}>
+			<img src={{user.avatar_url_bigger}}>
 		</div>
 
 		<div class="vendor-info">
